# monarch-money-tools

./: .env.example  .gitignore  404.html  AGENTS.md  CLAUDE.md  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  publish.yml
commands/: index.html
docs/: categorization.md  commands.md  index.md  install.md  privacy-security.md  retirement-simulator.md  troubleshooting.md  workflows.md
docs/javascripts/: mermaid-init.js
docs/patterns/: plan-apply-revert.md
docs/retirement-simulator/: sample-profile.yaml  sample.html
install/: index.html
monarch_money_tools/: __init__.py  analysis.py  analyzer.py  backup.py  cashflow.py  cli.py  csv_adapter.py  doctor.py  env.py  exporter.py  init_wizard.py  llm_review.py  models.py  monarch_api.py  normalizer.py  paths.py  profile.py  recurring.py  reporter.py  retire.py  revert.py  review.py  review_cleanup.py  rules.py  storage.py  taxonomy_cleanup.py  workbench.py
monarch_money_tools/cmd/: _utils.py  data.py  (+4 more)
retirement-simulator/: index.html
scripts/: generate_sample_html.py
search/: search_index.json
tests/: conftest.py  test_analysis.py  test_backup.py  test_cashflow.py  test_clear_reviews.py  test_cli.py  test_cmd_utils.py  test_conftest_fixtures.py  test_csv_adapter.py  test_dry_run.py  test_generate_sample.py  test_init_wizard.py  test_llm_review.py  test_profile.py  test_recurring.py  test_reporter.py  test_retire.py  test_revert.py  test_review.py  test_review_cleanup.py  test_rules.py  test_storage.py  test_taxonomy_cleanup.py  test_workbench.py
(+15 files in other folders)
