[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "monarch-money-tools"
version = "0.0.1"
description = "CLI for Monarch Money transaction categorization, cleanup, and rule management."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
  "pydantic>=2.8",
  "rich>=13.7",
  "typer>=0.12",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "hypothesis>=6.100",
  "pytest>=8.2",
  "pyright>=1.1.380",
  "ruff>=0.6",
]
api = [
  "aiohttp>=3.13",
  "monarchmoney>=0.1.15",
]
llm = [
  "anthropic>=0.40",
]
docs = [
  "mkdocs-material>=9.5",
]

[project.scripts]
monarch = "monarch_money_tools.cli:app"
monarch-money-tools = "monarch_money_tools.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["monarch_money_tools*"]

[tool.setuptools.package-data]
monarch_money_tools = ["templates/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pyright]
include = ["monarch_money_tools", "tests"]
pythonVersion = "3.11"
typeCheckingMode = "basic"
